# skytec

./: CMakeLists.txt
Task1/: CMakeLists.txt  main.c
Task2/: CMakeLists.txt  main.c
Task3/: Task3.docx
